--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@
     width: 90px;
     height: 90px;
 }
+
+.ladoA{
+    transform: scaleX(1);
+}
+
+.ladoB{
+    transform: scaleX(-1); /* lado contrário de 1 */
+}
