--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    background-image: url('imagens/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
 .mosquito1{
     width: 50px;
     height: 50px;
@@ -19,4 +25,26 @@
 
 .ladoB{
     transform: scaleX(-1); /* lado contrário de 1 */
+}
+
+.painel{
+    position: absolute;
+    width: 190px;
+    padding: 10px;
+    left: 0px;
+    bottom: 0px;
+    border-top: 1px solid #fff;
+    background-color: #fff;
+    opacity: 0.7;
+}
+
+.vida{
+    float: left;
+
+}
+
+.cronometro{
+    float: left;
+    font-size: 20px;
+    font-weight: bold;
 }
